--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -26,7 +26,10 @@ body {
 
                         &[role="definition"] {
 
-                            @include sf-hide($from: tabp);
+                            @include sf-media($from: tabp) {
+
+                                display: none;
+                            }
                         }
                     }
                 }
