--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1095,6 +1095,8 @@ html .fa-inverse, body .fa-inverse { color: var(--sf-color-black-contrast); }
 
 body > main h4 i.fal, body > main h4 i.far, body > main h4 i.fas, body > main h4 i.fab { margin-right: 0.35rem; }
 
+body > main p.number-item { padding-left: 0; padding-right: 0.5rem; font-size: 1.75rem; line-height: 0.85; }
+
 body > main > section[separator] { --sf-subunit-spacing: 0; --sf-zero-subunit-spacing: var(--sf-subunit-spacing); --sf-phab-subunit-spacing: var(--sf-zero-subunit-spacing); --sf-tabp-subunit-spacing: var(--sf-phab-subunit-spacing); --sf-tabl-subunit-spacing: var(--sf-tabp-subunit-spacing); --sf-note-subunit-spacing: var(--sf-tabl-subunit-spacing); --sf-desk-subunit-spacing: var(--sf-note-subunit-spacing); --sf-elas-subunit-spacing: var(--sf-desk-subunit-spacing); --subunit-spacing: var(--sf-zero-subunit-spacing); margin-bottom: var(--subunit-spacing); }
 
 @media screen and (min-width: 400px) { body > main > section[separator] { --subunit-spacing: var(--sf-phab-subunit-spacing); } }
@@ -1170,7 +1172,7 @@ body > main > [sf-block] article#table-examples table > tr > th:nth-child(5), bo
 
 ul[sf-checks] { margin-left: 1.5rem; }
 
-@media screen and (min-width: 540px) { ul[sf-checks] { margin-left: 3.5rem; } }
+@media screen and (min-width: 540px) { ul[sf-checks] { margin-left: 1.75rem; } }
 
 ul[sf-checks] > li { list-style-type: none; font-weight: bold; }
 
