--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -1,4 +1,22 @@
 /**
+ * @nuclide Clamp text to a maximum number of lines
+ * @section Mixins > Styles
+ * @modifiers
+ *  @include sf-line-clamp() - Clamp text to a maximum number of lines with an ellipsis at the end.
+ * @markup
+ *  @include sf-line-clamp($lines: 2) {
+ *  }
+ */
+@mixin sf-line-clamp($lines: 1) {
+
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/**
  * @nuclide Visually Hide
  * @section Mixins > Styles
  * @modifiers
