--- a/styleguide/scss/styles/_styles-media.scss
+++ b/styleguide/scss/styles/_styles-media.scss
@@ -111,8 +111,8 @@ object[type="image/svg+xml"] {
 
     @include sf-media($upto: tabp) {
   
-        margin-left: calc(var(--block-lr-padding) * -1);
-        margin-right: calc(var(--block-lr-padding) * -1);
+        margin-left: calc(var(--zero-side-margins) * -1);
+        margin-right: calc(var(--zero-side-margins) * -1);
       
         img {
     
@@ -121,6 +121,12 @@ object[type="image/svg+xml"] {
         }
     }
 
+    @include sf-media($from: zero, $upto: phab) {
+
+        margin-left: calc(var(--phab-side-margins) * -1);
+        margin-right: calc(var(--phab-side-margins) * -1);
+    }
+  
     @include sf-media($from: tabp) {
 
         img {
@@ -134,11 +140,18 @@ object[type="image/svg+xml"] {
   
         display: block;
         margin-top: 0.75rem;
+        line-height: 1.3;
     
         @include sf-media($upto: tabp) {
     
-            margin-left: var(--block-lr-padding);
-            margin-right: var(--block-lr-padding);
+            margin-left: var(--zero-side-margins);
+            margin-right: var(--zero-side-margins);
+        }
+
+        @include sf-media($from: zero, $upto: phab) {
+  
+            margin-left: var(--phab-side-margins);
+            margin-right: var(--phab-side-margins);
         }
     }
 }
