--- a/styleguide/stylesheets/sfumato.css
+++ b/styleguide/stylesheets/sfumato.css
@@ -2860,7 +2860,7 @@ button, a[role=button], [sf-button] {
   font-weight: 600;
   width: 100%;
   font-family: var(--sf-font-family-forms);
-  border: solid var(--sf-line-width) var(--sf-color-buttons-contrast);
+  border: solid var(--sf-line-width) var(--sf-color-buttons);
 }
 @media screen and (min-width: 540px) {
   button, a[role=button], [sf-button] {
@@ -2911,7 +2911,7 @@ input[type=button], input[type=submit], input[type=cancel] {
   font-weight: 600;
   width: 100%;
   font-family: var(--sf-font-family-forms);
-  border: solid var(--sf-line-width) var(--sf-color-buttons-contrast);
+  border: solid var(--sf-line-width) var(--sf-color-buttons);
 }
 @media screen and (min-width: 540px) {
   input[type=button], input[type=submit], input[type=cancel] {
