--- a/styleguide/scss/styles/_styles-buttons.scss
+++ b/styleguide/scss/styles/_styles-buttons.scss
@@ -40,6 +40,7 @@ button, a[role="button"], [sf-button] {
         
         padding: 0.6rem 0;
         user-select: none;
+        font-weight: 600;
     }
     
     &:hover,
@@ -123,6 +124,7 @@ input[type="button"], input[type="submit"], input[type="cancel"] {
     & > * {
 
         display: inline-block;
+        font-weight: 600;
     }
 
     i + span {
