--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -611,7 +611,6 @@
             background-color: var(--sf-color-light);
             border: var(--sf-line-width) solid var(--sf-color-form-field-line);
             border-radius: 0.15rem;
-            padding: 0.75rem 0.75rem;
       
             @include sf-media($from: tabp) {
 
@@ -624,6 +623,7 @@
 
                 width: 100%;
                 display: block;
+                height: auto;
             }
         }
     }
